--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
+
 <body>
-	<header>
-		<h1>Hello world!</h1>
-	</header>
+  <div class='page'>
+    <div class='sidebar'>
+  <p>If this page had a sidebar...</p>
+  <p>We’d have some problems with pseudo-classes.</p>
+</div>
+    <header>
+      <h1>CSS Selectors</h1>
+    </header>
+    <p class='synopsis'>CSS selectors let you <em>select</em> individual HTML
+      elements in an HTML document. This is <strong>super</strong> useful.</p>
+
+    <p>Classes are ridiculously important, since they allow you to select
+      arbitrary boxes in your web pages.</p>
+
+    <p>We’ll also be talking about links in this example, so here’s
+      <a href='https://internetingishard.com'>Interneting Is Hard</a> for us to
+      style.</p>
+
+    <a class='button' href='nowhere.html'>Button One</a>
+  <a id='button-2' class='button' href='nowhere.html'>Button Two</a>
+
 </body>
+
 </html>
+<!-- Join me on style.css
+-->
