fully completed BEM selectors

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
       style.</p>
 
     <a class='button' href='nowhere.html'>Button One</a>
-  <a id='button-2' class='button' href='nowhere.html'>Button Two</a>
+  <a id='button-2' class='call-to-action button' href='nowhere.html'>Button Two</a>
 
 </body>
 
 </html>
-<!-- Join me on style.css
+<!-- 
+
 -->
