--- a/index.html
+++ b/index.html
@@ -2,83 +2,93 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
 </head>
+
 <body id="container">
-<h1>HARRY POTTER</h1>
-  <header>
-    <nav class="nav">
-      <ul>
-        <li><a href="#">Introduction</a></li>
-        <li><a href="#">Plot</a></li>
-        <li><a href="#">Supplementary works</a></li>
-        <li><a href="#">Structure and genre</a></li>
-        <li><a href="#">Themes</a></li>
-        <li><a href="#">Origins</a></li>
-        <li><a href="#">Publishing history</a></li>
-        <li><a href="#">Achievements</a></li>
-        <li><a href="#">Reception</a></li>
-        <li><a href="#">Adaptations</a></li>
-        <li><a href="#">Attractions</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main class="main_content">
-    <h2>Introduction</h2>
-    <p>
-      Harry Potter is a series of fantasy novels written by British author J. K. Rowling. The novels chronicle the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron Weasley, all of whom are students at Hogwarts School of
-      Witchcraft and Wizardry. The main story arc concerns Harry's struggle against Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard governing body known as the Ministry of Magic and subjugate all wizards and Muggles
-      (non-magical people).
-    </p>
-    <p>
-      Since the release of the first novel, Harry Potter and the Philosopher's Stone, on 26 June 1997, the books have found immense popularity, critical acclaim and commercial success worldwide. They have attracted a wide adult audience as well as
-      younger readers and are often considered cornerstones of modern young adult literature. As of February 2018, the books have sold more than 500 million copies worldwide, making them the best-selling book series in history, and have been
-      translated into eighty languages. The last four books consecutively set records as the fastest-selling books in history, with the final instalment selling roughly eleven million copies in the United States within twenty-four hours of its
-      release.
-    </p>
-    <p>
-      The series was originally published in English by two major publishers, Bloomsbury in the United Kingdom and Scholastic Press in the United States. A play, Harry Potter and the Cursed Child, based on a story co-written by Rowling, premiered in
-      London on 30 July 2016 at the Palace Theatre, and its script was published by Little, Brown. The original seven books were adapted into an eight-part namesake film series by Warner Bros. Pictures, which is the third highest-grossing film series
-      of all time as of February 2018. In 2016, the total value of the Harry Potter franchise was estimated at $31 billion,[4] making Harry Potter one of the highest-grossing media franchises of all time.
-    </p>
-    <p>
-      A series of many genres, including fantasy, drama, coming of age, and the British school story (which includes elements of mystery, thriller, adventure, horror, and romance), the world of Harry Potter explores numerous themes and includes many
-      cultural meanings and references.[5] According to Rowling, the main theme is death. Other major themes in the series include prejudice, corruption, and madness.
-    </p>
-    <p>
-      The success of the books and films has allowed the Harry Potter franchise to expand with numerous derivative works, a travelling exhibition that premiered in Chicago in 2009, a studio tour in London that opened in 2012, a digital platform on
-      which J.K. Rowling updates the series with new information and insight, and a pentalogy of spin-off films premiering in November 2016 with Fantastic Beasts and Where to Find Them, among many other developments. Most recently, themed
-      attractions, collectively known as The Wizarding World of Harry Potter, have been built at several Universal Parks & Resorts amusement parks around the world.
-    </p>
-  </main>
+    <header class="main-header">
+        <h1>Harry Potter</h1>
+    </header>
+    <aside>
+        <nav class="nav">
+            <ul>
+                <li><a href="#">Introduction</a></li>
+                <li><a href="#">Plot</a></li>
+                <li><a href="#">Supplementary works</a></li>
+                <li><a href="#">Structure and genre</a></li>
+                <li><a href="#">Themes</a></li>
+                <li><a href="#">Origins</a></li>
+                <li><a href="#">Publishing history</a></li>
+                <li><a href="#">Achievements</a></li>
+                <li><a href="#">Reception</a></li>
+                <li><a href="#">Adaptations</a></li>
+                <li><a href="#">Attractions</a></li>
+            </ul>
+        </nav>
+    </aside>
+    <main class="main_content">
+        <h2>Introduction</h2>
+        <p>
+            Harry Potter is a series of fantasy novels written by British author J. K. Rowling. The novels chronicle the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron Weasley, all of whom are students at Hogwarts
+            School of
+            Witchcraft and Wizardry. The main story arc concerns Harry's struggle against Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard governing body known as the Ministry of Magic and subjugate all wizards and
+            Muggles
+            (non-magical people).
+        </p>
+        <p>
+            Since the release of the first novel, Harry Potter and the Philosopher's Stone, on 26 June 1997, the books have found immense popularity, critical acclaim and commercial success worldwide. They have attracted a wide adult audience as
+            well as
+            younger readers and are often considered cornerstones of modern young adult literature. As of February 2018, the books have sold more than 500 million copies worldwide, making them the best-selling book series in history, and have been
+            translated into eighty languages. The last four books consecutively set records as the fastest-selling books in history, with the final instalment selling roughly eleven million copies in the United States within twenty-four hours of its
+            release.
+        </p>
+        <p>
+            The series was originally published in English by two major publishers, Bloomsbury in the United Kingdom and Scholastic Press in the United States. A play, Harry Potter and the Cursed Child, based on a story co-written by Rowling,
+            premiered in
+            London on 30 July 2016 at the Palace Theatre, and its script was published by Little, Brown. The original seven books were adapted into an eight-part namesake film series by Warner Bros. Pictures, which is the third highest-grossing film
+            series
+            of all time as of February 2018. In 2016, the total value of the Harry Potter franchise was estimated at $31 billion,[4] making Harry Potter one of the highest-grossing media franchises of all time.
+        </p>
+        <p>
+            A series of many genres, including fantasy, drama, coming of age, and the British school story (which includes elements of mystery, thriller, adventure, horror, and romance), the world of Harry Potter explores numerous themes and
+            includes many
+            cultural meanings and references.[5] According to Rowling, the main theme is death. Other major themes in the series include prejudice, corruption, and madness.
+        </p>
+        <p>
+            The success of the books and films has allowed the Harry Potter franchise to expand with numerous derivative works, a travelling exhibition that premiered in Chicago in 2009, a studio tour in London that opened in 2012, a digital
+            platform on
+            which J.K. Rowling updates the series with new information and insight, and a pentalogy of spin-off films premiering in November 2016 with Fantastic Beasts and Where to Find Them, among many other developments. Most recently, themed
+            attractions, collectively known as The Wizarding World of Harry Potter, have been built at several Universal Parks & Resorts amusement parks around the world.
+        </p>
+    </main>
     <div class="right_bio">
-      <figure>
-        <img src="img/logo_hp.jpeg" alt="Harry_potter_logo">
-        <figcaption>
-          Harry Potter
-        </figcaption>
-      </figure>
-      <p>The Philosopher's Stone <br>(1997)</p>
-      <p>The Chamber of Secrets<br>(1998)</p>
-      <p>The Prisoner of Azkaban<br>(1999)</p>
-      <p>The Goblet of Fire<br>(2000)</p>
-      <p>The Order of the Phoenix<br>(2003)</p>
-      <p>The Half-Blood Prince<br>(2005)</p>
-      <p>The Deathly Hallows<br>(2007)</p>
-      <p> <b> Author </b> J. K. Rowling
-        <br> <b> Country </b> United Kingdom
-        <br> <b> Language </b> English
-        <br> <b> Genre </b> Fantasy, drama, young adult fiction, mystery, thriller, Bildungsroman
-        <br> <b> Publisher </b> Bloomsbury Publishing (UK) Pottermore (e-books; all languages)
-        <br> <b> Published </b> 26 June 1997 – 21 July 2007 (initial publication)
-        <br> <b> Media type </b> Print (hardback & paperback), Audiobook, E-book (as of March 2012)
-        <br> <b> No. of books </b> 7
-        <br> <b> Website </b> www.pottermore.com
-      </p> <!-- em tag wasnt working so i used b-->
+        <figure>
+            <img src="img/logo_hp.jpeg" alt="Harry_potter_logo">
+            <figcaption>
+                Harry Potter
+            </figcaption>
+        </figure>
+        <p>The Philosopher's Stone <br>(1997)</p>
+        <p>The Chamber of Secrets<br>(1998)</p>
+        <p>The Prisoner of Azkaban<br>(1999)</p>
+        <p>The Goblet of Fire<br>(2000)</p>
+        <p>The Order of the Phoenix<br>(2003)</p>
+        <p>The Half-Blood Prince<br>(2005)</p>
+        <p>The Deathly Hallows<br>(2007)</p>
+        <p> <b> Author </b> J. K. Rowling
+            <br> <b> Country </b> United Kingdom
+            <br> <b> Language </b> English
+            <br> <b> Genre </b> Fantasy, drama, young adult fiction, mystery, thriller, Bildungsroman
+            <br> <b> Publisher </b> Bloomsbury Publishing (UK) Pottermore (e-books; all languages)
+            <br> <b> Published </b> 26 June 1997 – 21 July 2007 (initial publication)
+            <br> <b> Media type </b> Print (hardback & paperback), Audiobook, E-book (as of March 2012)
+            <br> <b> No. of books </b> 7
+            <br> <b> Website </b> www.pottermore.com
+        </p> <!-- em tag wasnt working so i used b-->
     </div>
 </body>
 
