Corrected some mistakes done by you. You did everything perfectly in the font-face property but did mistakes while typing the file extention .ttf You had done tff instead of ttf.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="container">
-    <header class="main-header">
+    <header class="main-header"
         <h1>Harry Potter</h1>
     </header>
     <aside>
@@ -72,24 +72,31 @@
                 Harry Potter
             </figcaption>
         </figure>
-        <p>The Philosopher's Stone <br>(1997)</p>
-        <p>The Chamber of Secrets<br>(1998)</p>
-        <p>The Prisoner of Azkaban<br>(1999)</p>
-        <p>The Goblet of Fire<br>(2000)</p>
-        <p>The Order of the Phoenix<br>(2003)</p>
-        <p>The Half-Blood Prince<br>(2005)</p>
-        <p>The Deathly Hallows<br>(2007)</p>
-        <p> <b> Author </b> J. K. Rowling
-            <br> <b> Country </b> United Kingdom
-            <br> <b> Language </b> English
-            <br> <b> Genre </b> Fantasy, drama, young adult fiction, mystery, thriller, Bildungsroman
-            <br> <b> Publisher </b> Bloomsbury Publishing (UK) Pottermore (e-books; all languages)
-            <br> <b> Published </b> 26 June 1997 – 21 July 2007 (initial publication)
-            <br> <b> Media type </b> Print (hardback & paperback), Audiobook, E-book (as of March 2012)
-            <br> <b> No. of books </b> 7
-            <br> <b> Website </b> www.pottermore.com
-        </p> <!-- em tag wasnt working so i used b-->
+        <!-- I have arranged the below in ordered list -->
+        <ol>
+            <li>The Philosopher's Stone(1997)</li>
+            <li>The Chamber of Secrets(1998)</li>
+            <li>The Prisoner of Azkaban(1999)</li>
+            <li>The Goblet of Fire(2000)</li>
+            <li>The Order of the Phoenix(2003)</li>
+            <li>The Half-Blood Prince(2005)</li>
+            <li>The Deathly Hallows<(2007)</li>
+        </ol>
+        <hr>
+        <!-- Instead of ul and li try to make a table here
+            The tabel should have no borders
+          -->
+        <ul>
+            <li><strong> Author </strong> J. K. Rowling</li>
+            <li><strong> Country </strong> United Kingdom</li>
+            <li><strong> Language </strong> English</li>
+            <li><strong> Genre </strong> Fantasy, drama, young adult fiction, mystery, thriller, Bildungsroman</li>
+            <li><strong> Publisher </strong> Bloomsbury Publishing (UK) Pottermore (e-books; all languages)</li>
+            <li><strong> Published </strong> 26 June 1997 – 21 July 2007 (initial publication)</li>
+            <li><strong> Media type </strong> Print (hardback & paperback), Audiobook, E-book (as of March 2012)</li>
+            <li><strong> No. of books </strong> 7</li>
+            <li><strong> Website </strong> www.pottermore.com</li>
+        </ul>
     </div>
-</body>
-
+</body>strong
 </html>
