--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="container">
-    <header class="main-header"
+    <header class="main-header">
         <h1>Harry Potter</h1>
     </header>
     <aside>
