--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- Instead of ul and li try to make a table here
             The tabel should have no borders
           -->
-        <ul>
+    <!--    <ul>
             <li><strong> Author </strong> J. K. Rowling</li>
             <li><strong> Country </strong> United Kingdom</li>
             <li><strong> Language </strong> English</li>
@@ -96,7 +96,21 @@
             <li><strong> Media type </strong> Print (hardback & paperback), Audiobook, E-book (as of March 2012)</li>
             <li><strong> No. of books </strong> 7</li>
             <li><strong> Website </strong> www.pottermore.com</li>
-        </ul>
+        </ul>  -->
+        <table>
+          <tbody>
+            <tr> <td> <strong> Author </strong> </td> <td> J. K. Rowling </td> </tr>
+            <tr> <td> <strong> Country </strong> </td> <td> United Kingdom </td> </tr>
+            <tr> <td><strong> Language </strong></td> <td>English</td> </tr>
+            <tr> <td><strong> Genre </strong></td> <td>Fantasy, drama, young adult fiction, mystery, thriller, Bildungsroman </td> </tr>
+            <tr> <td><strong> Publisher </strong> </td> <td>Bloomsbury Publishing (UK) Pottermore (e-books; all languages) </td> </tr>
+            <tr> <td><strong> Published </strong></td> <td>26 June 1997 – 21 July 2007 (initial publication) </td> </tr>
+            <tr> <td><strong> Media type </strong></td> <td> Print (hardback & paperback), Audiobook, E-book (as of March 2012) </td> </tr>
+            <tr> <td><strong> No. of books </strong></td> <td> 7 </td> </tr>
+            <tr> <td><strong> Website </strong></td> <td> www.pottermore.com </td> </tr>
+          </tbody>
+        </table>
     </div>
 </body>strong
 </html>
+<tr> <td> </td> <td> </td> </tr>
