--- a/index.html
+++ b/index.html
@@ -13,23 +13,19 @@
     <header class="main-header">
         <h1>Harry Potter</h1>
     </header>
-    <aside>
         <nav class="nav">
-            <ul>
-                <li><a href="#">Introduction</a></li>
-                <li><a href="#">Plot</a></li>
-                <li><a href="#">Supplementary works</a></li>
-                <li><a href="#">Structure and genre</a></li>
-                <li><a href="#">Themes</a></li>
-                <li><a href="#">Origins</a></li>
-                <li><a href="#">Publishing history</a></li>
-                <li><a href="#">Achievements</a></li>
-                <li><a href="#">Reception</a></li>
-                <li><a href="#">Adaptations</a></li>
-                <li><a href="#">Attractions</a></li>
-            </ul>
+                <div class="intro"><a href="/index.html">Introduction</a></div>
+                <div class="plot"><a href="/pages/plot.html">Plot</a></div>
+                <div class="supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+                <div class="s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+                <div class="themes"><a href="/pages/themes.html">Themes</a></div>
+                <div class="orig"><a href="/pages/origins.html">Origins</a></div>
+                <div class="p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+                <div class="achv"><a href="/pages/achievenments.html">Achievements</a></div>
+                <div class="recep"><a href="/pages/reception.html">Reception</a></div>
+                <div class="adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+                <div class="attractions"><a href="/pages/attractions.html">Attractions</a></div>
         </nav>
-    </aside>
     <main class="main_content">
         <h2>Introduction</h2>
         <p>
@@ -83,20 +79,6 @@
             <li>The Deathly Hallows<(2007)</li>
         </ol>
         <hr>
-        <!-- Instead of ul and li try to make a table here
-            The tabel should have no borders
-          -->
-    <!--    <ul>
-            <li><strong> Author </strong> J. K. Rowling</li>
-            <li><strong> Country </strong> United Kingdom</li>
-            <li><strong> Language </strong> English</li>
-            <li><strong> Genre </strong> Fantasy, drama, young adult fiction, mystery, thriller, Bildungsroman</li>
-            <li><strong> Publisher </strong> Bloomsbury Publishing (UK) Pottermore (e-books; all languages)</li>
-            <li><strong> Published </strong> 26 June 1997 – 21 July 2007 (initial publication)</li>
-            <li><strong> Media type </strong> Print (hardback & paperback), Audiobook, E-book (as of March 2012)</li>
-            <li><strong> No. of books </strong> 7</li>
-            <li><strong> Website </strong> www.pottermore.com</li>
-        </ul>  -->
         <table>
           <tbody>
             <tr> <td> <strong> Author </strong> </td> <td> J. K. Rowling </td> </tr>
@@ -111,6 +93,5 @@
           </tbody>
         </table>
     </div>
-</body>strong
+</body>
 </html>
-<tr> <td> </td> <td> </td> </tr>
