Made changes to the navigation

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 
 <body id="container">
-    <header class="main-header">
-        <h1>Harry Potter</h1>
-    </header>
     <aside>
         <nav class="nav">
             <ul>
@@ -30,6 +27,9 @@
             </ul>
         </nav>
     </aside>
+    <header class="main-header">
+        <h1>Harry Potter</h1>
+    </header>
     <main class="main_content">
         <h2>Introduction</h2>
         <p>
@@ -83,20 +83,6 @@
             <li>The Deathly Hallows<(2007)</li>
         </ol>
         <hr>
-        <!-- Instead of ul and li try to make a table here
-            The tabel should have no borders
-          -->
-    <!--    <ul>
-            <li><strong> Author </strong> J. K. Rowling</li>
-            <li><strong> Country </strong> United Kingdom</li>
-            <li><strong> Language </strong> English</li>
-            <li><strong> Genre </strong> Fantasy, drama, young adult fiction, mystery, thriller, Bildungsroman</li>
-            <li><strong> Publisher </strong> Bloomsbury Publishing (UK) Pottermore (e-books; all languages)</li>
-            <li><strong> Published </strong> 26 June 1997 – 21 July 2007 (initial publication)</li>
-            <li><strong> Media type </strong> Print (hardback & paperback), Audiobook, E-book (as of March 2012)</li>
-            <li><strong> No. of books </strong> 7</li>
-            <li><strong> Website </strong> www.pottermore.com</li>
-        </ul>  -->
         <table>
           <tbody>
             <tr> <td> <strong> Author </strong> </td> <td> J. K. Rowling </td> </tr>
@@ -111,6 +97,6 @@
           </tbody>
         </table>
     </div>
-</body>strong
+</body>
 </html>
 <tr> <td> </td> <td> </td> </tr>
