🍝🏞 Updated with Glitch

--- a/pages/origins.html
+++ b/pages/origins.html
@@ -5,26 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="../css/style.css">
   <title>Origins</title>
 </head>
 
 <body>
+  <aside>
+        <nav class="navigation">
+                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
+        </nav>
+    </aside>
   <h1>
     Origins
   </h1>
-  <nav>
-    <a href="/index.html">Introduction</a>
-    <a href="/pages/plot.html">Plot</a>
-    <a href="/pages/supplementary.html">Supplementary works</a>
-    <a href="/pages/s_g.html">Structure and genre</a>
-    <a href="/pages/themes.html">Themes</a>
-    <a href="/pages/origins.html">Origins</a>
-    <a href="/pages/publication_history.html">Publishing history</a>
-    <a href="/pages/achievenments.html">Achievements</a>
-    <a href="/pages/reception.html">Reception</a>
-    <a href="/pages/adaptation.html">Adaptations</a>
-    <a href="/pages/attractions.html">Attractions</a>
-  </nav>
 </body>
 
 </html>
