--- a/index.html
+++ b/index.html
@@ -9,25 +9,28 @@
     <title>Document</title>
 </head>
 
-<body id="container">
+  <body>
     <aside>
-        <nav class="nav">
-                <div class="intro"><a href="/index.html">Introduction</a></div>
-                <div class="plot"><a href="/pages/plot.html">Plot</a></div>
-                <div class="supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
-                <div class="s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
-                <div class="themes"><a href="/pages/themes.html">Themes</a></div>
-                <div class="orig"><a href="/pages/origins.html">Origins</a></div>
-                <div class="p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
-                <div class="achv"><a href="/pages/achievenments.html">Achievements</a></div>
-                <div class="recep"><a href="/pages/reception.html">Reception</a></div>
-                <div class="adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
-                <div class="attractions"><a href="/pages/attractions.html">Attractions</a></div>
+        <nav class="navigation">
+                <div class="navlink intro"><a href="/index.html">Introduction</a></div>
+                <div class="navlink plot"><a href="/pages/plot.html">Plot</a></div>
+                <div class="navlink supp"><a href="/pages/supplementary.html">Supplementary works</a></div>
+                <div class="navlink s-g"><a href="/pages/s_g.html">Structure and genre</a></div>
+                <div class="navlink themes"><a href="/pages/themes.html">Themes</a></div>
+                <div class="navlink orig"><a href="/pages/origins.html">Origins</a></div>
+                <div class="navlink p-h"><a href="/pages/publication_history.html">Publishing history</a></div>
+                <div class="navlink achv"><a href="/pages/achievenments.html">Achievements</a></div>
+                <div class="navlink recep"><a href="/pages/reception.html">Reception</a></div>
+                <div class="navlink adapt"><a href="/pages/adaptation.html">Adaptations</a></div>
+                <div class="navlink attractions"><a href="/pages/attractions.html">Attractions</a></div>
         </nav>
     </aside>
     <header class="main-header">
         <h1>Harry Potter</h1>
     </header>
+    
+    
+<div id="container">
     <main class="main_content">
         <h2>Introduction</h2>
         <p>
@@ -78,7 +81,7 @@
             <li>The Goblet of Fire(2000)</li>
             <li>The Order of the Phoenix(2003)</li>
             <li>The Half-Blood Prince(2005)</li>
-            <li>The Deathly Hallows<(2007)</li>
+            <li>The Deathly Hallows(2007)</li>
         </ol>
         <hr>
         <table>
@@ -95,5 +98,6 @@
           </tbody>
         </table>
     </div>
-</body>
+</div>
+  </body>
 </html>
